--- a/sass/pages/_post.scss
+++ b/sass/pages/_post.scss
@@ -25,7 +25,7 @@
 
 
 .Blog-entry {
-  padding-top: $section-spacing-mobile;
+  padding-top: $section-spacing-mobile / 2;
 
   @include respond-min(800px) {
     padding-top: $section-spacing;
@@ -56,6 +56,7 @@
 
 .Entry-images {
   margin: $section-spacing 0;
+
   @include respond-min(1600px) {
     margin: $section-spacing-large 0;
   }
